[package]
name = "rotatelogs"
version = "0.1.0"
edition = "2021"
authors = ["Efi Weiss"]
description = "On-demand logrotate binary written in Rust that accepts piped stdout and rotates log files based on size, lines, or SIGHUP signals"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/rotatelogs"
keywords = ["log", "rotate", "logrotate", "logging", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
signal-hook = "0.3"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
